--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "bundle/powerline-fonts"]
 	path = bundle/powerline-fonts
 	url = git@github.com:Lokaltog/powerline-fonts.git
+[submodule "bundle/snipmate"]
+	path = bundle/snipmate
+	url = git@github.com:msanders/snipmate.vim.git
