--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "bundle/snipmate"]
 	path = bundle/snipmate
 	url = git@github.com:msanders/snipmate.vim.git
+[submodule "bundle/autopairs"]
+	path = bundle/autopairs
+	url = git@github.com:jiangmiao/auto-pairs.git
