Install GitGutter Plugin

--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,6 @@
 [submodule "bundle/autopairs"]
 	path = bundle/autopairs
 	url = git@github.com:jiangmiao/auto-pairs.git
+[submodule "bundle/vim-gitgutter"]
+	path = bundle/vim-gitgutter
+	url = git@github.com:airblade/vim-gitgutter.git
